--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -14,7 +14,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "start": "PORT=5000 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
