improve docker-compose.yml and some other stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
 
   frontend:
-    container_name: frontend
+#    container_name: frontend
     build: ./frontend
     env_file:
       - .env
@@ -16,7 +16,7 @@ services:
     tty: true
 
   api:
-    container_name: api
+#    container_name: api
     build: ./api
     env_file:
       - .env
@@ -30,8 +30,8 @@ services:
 
   mongo:
     image: 'bitnami/mongodb:latest'
-    container_name: mongo
-    ports:
-      - "27017:27017"
+#    container_name: mongo
+#    ports:
+#      - "27017:27017"
     volumes:
       - ./mongo/database:/bitnami
