--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,8 @@
-API_PORT=8080
-
 # FRONT END PORT
 PORT=5000
+
+# API PORT
+API_PORT=8080
 
 # ALL VARIABLES SENT TO REACT MUST START WITH   "REACT_APP_"
 REACT_APP_API_ADDRESS=http://localhost:8080
